assets/css/admin_component_style.css
 * {
     /*-webkit-transition: all 0.25s ease-in-out;*/
 }
 
 body {
     background-color: #ccc;
 }
 
 #pre-loader {
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0px;
     left: 0px;
     background-color: white;
     display: flex;
     z-index: 999999999;
 }
 
 #user_icon {
     width: 38px!important;
     height: 38px!important;
     position: relative;
     top: 12px;
     margin-right: 12px;
 }
 
 .brand-logo {
     font-weight: 300 !important;
     padding-left: 12px !important;
 }
 
 .component {
     border-bottom: 1px solid #e0e0e0;
     border-right: 1px solid #e0e0e0;
     padding: 0px !important;
 }
 
 .card {
     margin: 0px !important;
     /* OVERRIDES DEFAULT */
 }
 
 .component-name {
     font-weight: 500;
     font-size: 16px;
     color: black;
 }
 
 .in-stock {
     margin: 0px;
     padding: 0px;
 }
 
 .form-container {
     overflow: hidden;
     max-width: 100%;
     padding: 0 32px;
 }
 
 #search-input {
     width: 100%;
     border-radius: 4px;
     border: 1px solid #e5e5e5;
     font-size: 14px;
     padding: 8px 30px;
     outline: none;
     height: auto;
     margin: 0px;
     box-sizing: border-box;
 }
 
 .nav-row {
     position: relative;
     overflow-x: auto;
     overflow-y: hidden;
     height: 64px;
     width: 100%;
     margin: 0 auto;
     white-space: nowrap;
 }
 
 #search-bar-holder {
     max-width: 100%;
     padding-left: 10px;
     padding-right: 10px;
 }
 
 #top-search-bar {
     border: 0px;
     border-radius: 3px;
     padding: 12px;
     width: 100%;
     box-sizing: border-box;
     outline: none;
     margin: 0px;
     background-color: rgba(0, 0, 0, 0.17);
     color: black;
 }
 
 #search-bar-icon {
     background-color: rgba(0, 0, 0, 0.17);
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
     color: gray;
 }
 
 #search-container {
     margin: 0px;
 }
 
 #search-icon {
     position: relative;
     top: 35px;
     left: 4px;
     cursor: pointer;
 }
 
 .autocomplete-content {
     margin-left: 34px !important;
 }
 
 .component-vendor {
     margin: 0px;
     font-size: 12px;
     padding: 0px;
 }
 
 .component-image,
 .image-container {
     height: 228px !important;
     width: 228px !important;
     margin: auto !important;
 }
 
 .component-image-container {
     overflow: hidden;
     padding: 1rem;
 }
 
 .component-header {}
 
 .component-header a {
     color: black;
 }
 
 .component-footer {
     padding: 1rem;
 }
 
 .section {
     padding: 0px !important;
 }
 
 label {
     color: black;
 }
 
 #current-location {
     padding: 2px;
     padding-bottom: 4px;
     font-size: 16px;
     margin: 0px;
 }
 
 #current-location i {
     position: relative;
     top: 5px;
     display: inline;
 }
 
 #nav-pc {
     display: none;
 }
 
 #dropdown2 {
     width: auto !important;
     /*OVERRIDES FRAMEWORK DEFAULT*/
 }
 /* COPMONENT CARD */
 
 .component-card {
     /*height:256px;*/
 }
 
 .component-image-section {
     height: 210px;
     width: 50%;
     display: inline-block;
     float: left;
     padding: 8px;
 }
 
 .component-card-image-container {
     margin: auto;
 }
 
 .component-card-image {
     width: 100%;
     max-width: 100%;
     height: 100%;
     max-height: 200px;
 }
 
 .component-info-section {
     display: inline-block;
     width: 50%;
 }
 
 .component-heading {
     padding: 12px 8px;
     height: 42px;
 }
 
 .component-heading h3 {
     margin: 0px;
     padding: 0px;
     font-size: 18px;
     font-weight: 500;
 }
 
 .component-description {
     padding: 6px 8px;
     height: 168px;
     overflow-x: hidden;
 }
 
 .component-description p {
     margin: 0px;
     font-weight: 400;
     color: black;
 }
 
 .component-options-section {
     height: 46px;
     border-top: 1px solid #e2e2e2;
     overflow: hidden;
 }
 
 .component-option {
     width: 33.33%;
     display: inline-block;
     float: left;
     height: inherit;
     padding: 4px 12px;
     background-color: #eee;
     border-right: 1px solid #ccc;
 }
 
 .component-option i {
     position: relative;
     top: -24px;
 }
 
 .component-option p,
 .component-option a {
     margin: 0px;
     padding-left: 28px;
     padding-top: 10px;
     color: black !important;
 }
 
 .component-option-wrapper {
     margin: auto;
 }
 /* SEARCH MODAL WINDOW */
 
 #search-modal-background {
     background-color: rgba(0, 0, 0, 0.34);
     position: fixed;
     top: 0px;
     left: 0px;
     height: 100%;
     width: 100%;
     z-index: 999;
     display: none;
 }
 
 #search-modal-wrapper {
     width: 620px;
     height: 480px;
     margin: auto;
     position: relative;
     top: 8%;
     overflow: hidden;
     display: none;
     background-color: #eee;
 }
 
 #search-modal-content {
     padding: 10px;
     overflow-y: scroll;
     height: 100%;
 }
 
 #search-modal-bar {
     height: 56px;
     position: absolute;
     width: 100%;
     top: 0px;
     z-index: 10;
 }
 
 #search-modal-result-wrapper {
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0px;
     padding-top: 56px;
     z-index: 9;
 }
 
 #search-modal-result {
     overflow-y: scroll;
     height: inherit;
 }
 
 #search-input-for-search-modal {
     padding: 8px 42px;
     border: 0px !important;
     box-sizing: border-box;
     margin: 0px;
     height: 56px !important;
     box-shadow: 0px !important;
     -webkit-box-shadow: 0px !important;
 }
 
 .search-keyword {
     /*color:teal;*/
     font-weight: 600;
 }
 
 #search-icon-left {
     cursor: pointer;
     position: relative;
     top: -40px;
     left: 10px;
     float: left;
 }
 
 #search-icon-right {
     cursor: pointer;
     position: relative;
     top: -40px;
     right: 10px;
     float: right;
 }
 /* SEARCH RESULT */
 
 .search-result-wrapper {
     overflow: hidden;
     padding: 8px 6px;
     height: 80px;
     margin: 4px 4px 0px 4px;
     border-bottom: 1px solid #e5e5e5;
 }
 
 .search-result-image-wrapper {
     width: 64px;
     display: inline-block;
     float: left;
     height: 64px;
 }
 
 .search-result-description {
     display: inline-block;
     float: left;
     padding: 0px 12px;
     height: 64px;
 }
 
 .search-result-wrapper:last-child {
     border-bottom: 0px !important;
 }
 
 .search-result-image {
     width: 100%;
     max-width: 100%;
     height: 100%;
     max-height: 100%;
 }
 
 .search-result-component-name {
     margin: 0px;
     padding: 0px;
     font-size: 16px;
     color: black;
 }
 
 .search-result-component-id {
     margin: 0px;
     padding: 2px 0px;
     text-align: left;
 }
 
 .search-result-vendor-name {
     margin: 0px;
     padding: 2px 0px;
     text-align: left;
 }
 
 ::-webkit-input-placeholder {
     color: gray !important;
 }
 
 ::-moz-placeholder {
     color: gray !important;
 }
 /* RULES FOR RESPONSIVENESS */
 
 @media screen and (max-width:1200px) {
     #nav-pc {
         display: initial;
     }
     .hide-on-1200px {
         display: none;
     }
 }
 
 @media screen and (max-width:1000px) {
     #center-mobile {
         margin: auto;
     }
     .nav-row {
         height: 56px;
     }
     .navbar-fixed {
         height: 120px !important;
     }
 }
 
 @media screen and (max-width:600px) {
     .component-image,
     .image-container {
         height: 148px !important;
         width: 168px !important;
     }
     .brand-logo {
         padding: 0px !important;
     }
     .navbar-fixed {
         height: 112px !important;
     }
     .nav-row {
         height: 56px;
     }
     #center-mobile {
         margin: auto;
     }
     #current-location {
         padding: 0 0 4 0px;
         font-size: 14px;
     }
     #search-modal-wrapper {
         width: 100%;
         height: 100%;
         top: 0%;
     }
 }
 
 @media screen and (max-width:400px) {
     nav .brand-logo {
         font-size: 1.9rem !important;
     }
 }
 /* ADD COMPONENT MODAL */
 
 #add-com-modal-background {
     height: 100%;
     width: 100%;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.36);
     z-index: 999;
     top: 0px;
     display: none;
 }
 
 #add-com-modal-wrapper {
     margin: auto;
     position: relative;
     top: 12%;
     width: 480px;
 }
 
 #add-com-modal-header h4 {
     font-size: 32px;
     font-weight: 300;
     margin: 0px;
     padding: 20px 0px 8px 20px;
 }
 
 #add-com-modal-inputs {
     margin: 0px !important;
     padding: 0px 20px;
 }
 
 .add-com-inputs,
 .select-dropdown {
     margin-bottom: 6px !important;
 }
 
 #add-com-modal-footer {
     padding: 20px 20px 20px 20px;
     overflow: auto;
 }
 
 #btn-close-modal {
     float: right;
     padding-right: 20px;
     color: #888;
     font-size: 28px;
     cursor: pointer;
 }
 
 .prefix {
     top: 8px;
 }
 
 #com_image_wrap {
     margin: auto;
 }
 
 #com_image_to_upload {
     height: 128px;
     width: 128px;
     max-width: 100%;
 }
 
 #add-com-modal-footer p {
     margin: 0px;
     font-size: 14px;
     display: inline-block;
     float: left;
     padding: 6px;
 }
 
 @media screen and (max-width:600px) {
     #add-com-modal-wrapper {
         width: 95%;
         top: 10%;
     }
     #add-com-modal-footer p {
         font-size: 13px;
     }
     #com-image_to_upload {
         width: 98px;
         height: 98p;
     }
     #preloader-container h6 {
         text-align: center;
         font-weight: 300 !important;
         font-size: 26px !important;
     }
 }
 /**** CUSTOM SCROLL BAR FOR WEBKIT ****/
 
 .custom_scroll_bar::-webkit-scrollbar-track {
     background-color: #eee;
 }
 
 .custom_scroll_bar::-webkit-scrollbar {
     width: 8px;
     background-color: #eee;
 }
 
 .custom_scroll_bar::-webkit-scrollbar-thumb {
     background-color: #ccc;
 }
 /* FOOTER FIX */
 
 .page-footer {
     position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
 }

